--- a/code/jupyter/unit_tests_TAD.ipynb
+++ b/code/jupyter/unit_tests_TAD.ipynb
@@ -36,8 +36,8 @@
     "train_x = torch.linspace(0, 1, 100)\n",
     "\n",
     "train_y = torch.stack([\n",
-    "    torch.sin(train_x * (2 * math.pi)) + torch.randn(train_x.size()) * 0.2,\n",
-    "    torch.cos(train_x * (2 * math.pi)) + torch.randn(train_x.size()) * 0.2,\n",
+    "    torch.sin(train_x * (2. * math.pi)) + torch.randn(train_x.size()) * 0.2,\n",
+    "    torch.cos(train_x * (2. * math.pi)) + torch.randn(train_x.size()) * 0.2,\n",
     "], -1)"
    ]
   },
