--- a/code/testing/simulators/silly_test.ipynb
+++ b/code/testing/simulators/silly_test.ipynb
@@ -2,26 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vfield import VField\n",
+    "import numpy as np\n",
+    "\n",
+    "vf = VField(N=2, D=2, tgt_loc=np.array([0.2,0.1]),\n",
+    "                 tgt_vec=np.array([0.5,1.0]),\n",
+    "                 polynomial_order=4, polynomial_coefficients=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.50498656, 1.00763244])"
+       "array([19.33960836, 17.62260976])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from vfield import VField\n",
-    "import numpy as np\n",
-    "\n",
-    "vf = VField()\n",
-    "```````````\n",
+    "loc = np.array([1., 3.])\n",
     "vf(loc)"
    ]
   },
