--- a/code/jupyter/ConvFail_homoskedatic.ipynb
+++ b/code/jupyter/ConvFail_homoskedatic.ipynb
@@ -3747,7 +3747,7 @@
     "np.savetxt('data_plots/Qf1_fail_EIbehavior.txt',Qf1.evaluate().detach().numpy())\n",
     "np.savetxt('data_plots/Qf12_fail_EIbehavior.txt', Qf12.evaluate().detach().numpy())\n",
     "np.savetxt( 'data_plots/Q21_fail_EIbehavior.txt', Q21.evaluate().detach().numpy())\n",
-    "np.savetxt('data_plots/iter_fail_EIbehavior.txt', iter+1)"
+    "#np.savetxt('data_plots/iter_fail_EIbehavior.txt', iter+1)"
    ]
   },
   {
@@ -3766,27 +3766,6 @@
    "outputs": [],
    "source": [
     "np.savetxt('data_plots/v2_fail_EIbehavior.txt', v2.detach().numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sleep' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/vd/tt7x9mbn35b5wxq8_t6p0mt80000gn/T/ipykernel_17438/2305272642.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msleep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sleep' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "sleep"
    ]
   },
   {
