--- a/code/jupyter/ConvSuccess_homoskedatic.ipynb
+++ b/code/jupyter/ConvSuccess_homoskedatic.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# If model is bad, initialize at previous 2 sample!!!"
+    "# Plots settings"
    ]
   },
   {
@@ -138,26 +138,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5540983606557375"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.0779/ 0.0305\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,10 +157,8 @@
     "class MultitaskGPModel(gpytorch.models.ExactGP):\n",
     "    def __init__(self, train_x, train_y, likelihood,num_base_kernels):\n",
     "        super(MultitaskGPModel, self).__init__(train_x, train_y, likelihood)\n",
-    "        a = torch.ones(2,2)\n",
-    "        chol_q = torch.tril(a)\n",
     "        self.mean_module = vvm.TensorProductSubMean(gpytorch.means.LinearMean(2), num_tasks = 2)  #vvm.TensorProductSubMean(gpytorch.means.LinearMean(2), num_tasks = 2)#vvm.TensorProductSubMean(gpytorch.means.ConstantMean(), num_tasks = 2)  # \n",
-    "        base_kernels = []\n",
+    "        base_kernels = [] #contain all the base kernels\n",
     "        for i in range(num_base_kernels):\n",
     "            base_kernels.append(gpytorch.kernels.ScaleKernel(( gpytorch.kernels.RBFKernel() ))) #gpytorch.kernels.PolynomialKernel(4)  ##gpytorch.kernels.MaternKernel()# (vvk_rbf.vvkRBFKernel())\n",
     " \n",
@@ -267,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Design parameters and sampling point optimization"
+    "# Design parameters and sampling point optimization (where to explore?)"
    ]
   },
   {
@@ -318,6 +296,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -335,6 +320,13 @@
     "\n",
     "loc_sample0 = loc_sample.reshape(loc_size + 1, 2)\n",
     "#loc_sample0[-1] = train_x[-1] + 0.01\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TAD algorithm"
    ]
   },
   {
@@ -720,8 +712,7 @@
     "    for i in range(pf1.shape[0]):\n",
     "        lower_bound[i] = pf1[i] -  torch.sqrt(Qf12[i,i])\n",
     "        upper_bound[i] = pf1[i] +  torch.sqrt(Qf12[i,i])\n",
-    "#     d = torch.sqrt(gpytorch.inv_quad(Qf1, f_target - pf1))\n",
-    "#     print(d)\n",
+    "\n",
     "    SUCCESS = stopping_criteria(tol_vector, f_target, lower_bound, upper_bound)\n",
     "    \n",
     "    \n",
@@ -731,11 +722,7 @@
     "    print('mohabb disatance is' + str(Qf12.inv_quad(f_target - pf1)))\n",
     "    if not SUCCESS:\n",
     "    \n",
-    "    #var_vec[iter] = var\n",
-    "        \n",
-    "        \n",
     "\n",
-    "         #np.random.random_sample((loc_size,2))\n",
     "\n",
     "        \n",
     "\n",
@@ -973,6 +960,13 @@
     "print(f_target + 0.001)\n",
     "print(pf1)\n",
     "print(num_base_kernels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting model validation strategy"
    ]
   },
   {
@@ -1246,6 +1240,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting expected value and data fit term"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1282,6 +1283,13 @@
     "ax2.set_xticks(np.arange(0, iter+3, step=3.))\n",
     "plt.savefig('figures_Carlo/exp_info/expectedinfo_vs_datafit_2_base.pdf',dpi=300, bbox_inches='tight')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving all data needed for plots"
    ]
   },
   {
@@ -1334,6 +1342,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plots for vizualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -1364,13 +1379,6 @@
     "plt.savefig('figures_Carlo/strategies/tad_sol_all_2_base.pdf')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1470,7 +1478,7 @@
     "low = -3.2\n",
     "high = 3.2\n",
     "#for iter_plt in range(1,iter):\n",
-    "iter_plt = 18\n",
+    "iter_plt = 13\n",
     "ii = 3 + (iter_plt - 1) * (loc_size + 1)\n",
     "#######################\n",
     "\n",
@@ -1514,7 +1522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grid"
+    "# Grid Sampling"
    ]
   },
   {
@@ -1636,7 +1644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random sol"
+    "# Random sampling"
    ]
   },
   {
@@ -1742,6 +1750,13 @@
     "ax.set_title('Uniformly Random Solution', fontsize = 40)\n",
     "\n",
     "plt.savefig('figures_Carlo/strategies/rdn_sol_2_base.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vizualizing Means and Variances"
    ]
   },
   {
